Setup api requests from FE and CORS
