# src/app/terraform/openapi_spotifysongoftheday_spec.json
@@ -1,75 +1,139 @@
 {
-    "openapi": "3.0.1",
-    "info": {
-      "title": "Spotify Song of the Day",
-      "version": "1.0.0"
-    },
-    "paths": {
-      "/spotifysongoftheday": {
-        "get": {
-          "responses": {
-            "200": {
-              "description": "A successful response",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "string"
-                  }
+  "openapi": "3.0.1",
+  "info": {
+    "title": "Spotify Song of the Day",
+    "version": "1.0.0"
+  },
+  "paths": {
+    "/spotifysongoftheday": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "A successful response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
-          },
-          "x-amazon-apigateway-integration": {
-            "httpMethod": "POST",
-            "uri": "${apiHandler}",
-            "passthroughBehavior": "when_no_match",
-            "timeoutInMillis": 29000,
-            "type": "aws_proxy"
           }
         },
-        "post": {
-          "responses": {
-            "200": {
-              "description": "A successful response",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "string"
-                  }
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "uri": "${apiHandler}",
+          "passthroughBehavior": "when_no_match",
+          "timeoutInMillis": 29000,
+          "type": "aws_proxy"
+        }
+      },
+      "post": {
+        "responses": {
+          "200": {
+            "description": "A successful response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
-          },
-          "x-amazon-apigateway-integration": {
-            "httpMethod": "POST",
-            "uri": "${apiHandler}",
-            "passthroughBehavior": "when_no_match",
-            "timeoutInMillis": 29000,
-            "type": "aws_proxy"
           }
         },
-        "options": {
-          "responses": {
-            "200": {
-              "description": "A successful response",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "string"
-                  }
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "uri": "${apiHandler}",
+          "passthroughBehavior": "when_no_match",
+          "timeoutInMillis": 29000,
+          "type": "aws_proxy"
+        }
+      },
+      "options": {
+        "summary": "CORS support",
+        "description": "Enable CORS by returning the correct headers",
+        "responses": {
+          "200": {
+            "description": "CORS preflight response",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Methods": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "Access-Control-Allow-Headers": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "type": "mock",
+          "requestTemplates": {
+            "application/json": "{\"statusCode\": 200}"
           },
-          "x-amazon-apigateway-integration": {
-            "httpMethod": "POST",
-            "uri": "${apiHandler}",
-            "passthroughBehavior": "when_no_match",
-            "timeoutInMillis": 29000,
-            "type": "aws_proxy"
+          "responses": {
+            "default": {
+              "statusCode": "200",
+              "responseParameters": {
+                "method.response.header.Access-Control-Allow-Origin": "'*'",
+                "method.response.header.Access-Control-Allow-Methods": "'GET,POST,OPTIONS'",
+                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,x-api-key'"
+              },
+              "responseTemplates": {
+                "application/json": "{}"
+              }
+            }
           }
         }
       }
     }
   }
-  
+}
